# Ozz

./: .env.example  .env.template  .gitignore  .replit  CHANGELOG.md  COMPLETION_CHECKLIST.md  COMPLETION_PROMPT.md  COMPLIANCE_MATRIX.md  DEPLOYMENT_GUIDE.md  FINAL_TZ_COMPLIANCE_REPORT.md  FUNCTIONAL_CHECKLIST.md  META_AUTOFIXER_REPORT.md  META_GUARDIAN_GUIDE.md  Makefile  PROJECT_COMPLETION_CHECKLIST.md  PROMPTS_SYSTEM.md  QUICK_START.md  README.md  README_BOLT.md  REPLIT_AI_PROMPTS.md  RESTORATION_REPORT.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE_OPTIONS.md  TROUBLESHOOTING_GUIDE.md  healthcheck.py  main.py  products_database.json  pyproject.toml  replit.md  requirements.txt  start.sh
src/: __init__.py
src/bot/: __init__.py  handlers.py
src/core/: config.py  meta_guardian.py
webapp/: index.html  server.py
